2007-1-19 Max Derhak
  * Added ability to use multiple inheritance for CIccTag co-derived on IIccExtensionTag
    interface and accessed through a GetExtension() virtual function.

2006-12-29
  * Added CIccCmmMru extension CMM class which provides limited caching of last few unique
    color transforms.  This is a limited performance improvement for SampleIccCmm.
	
2006-12-28
  * Created SampleIccCmm for Windows platforms.  This allows Windows applications to make use
    SampleICC's proflib through Windows ICM API.
	
2006-12-06 Kevin Wheatley
  * Miscelaneouos Bug Fixes
  * Clean up of various compiler warnings

2006-11-22 Max Derhak
  * Added newly approved technology tag signatures for Motion Picture Industry to
    icProfileHeader.h

2006-11-07 Max Derhak
  * Added support for optional multiProcessingElementType tags.  These tags provide
    an arbitrary order of curves, matricies, and N-D luts encoded using floating
    point.  The CIccTagMultiProcessElement class implements these objects.  MPE based tags
    can have 1 or more CIccMultiProcessElement based objects attached to them.
    See CIccMpeCurveSet, CIccMpeMatrix, CIccMpeCLUT for more details.  Additional future
    placeholder elements CIccMpeBAcs and CIccMpeEAcs objects are defined, but provide no
    processing capabilities. See additions to Icc Specification for more details
    releated to optional MPE based tags.  
  * Added CmdLine tool IccV4ToMPE that allows one to populate MPE based tags based upon
    contents of LutAtoB and LutBtoA based tags.
  
2006-10-30 Max Derhak
  * Added direct accessors CIccTagMultiLocalizedUnicode::Find() and 
    CIccTagMultiLocalizedUnicode::SetText() for easier creation of 
    multiLocalizedUnicode based tags
  
2006-10-27 Max Derhak
  * Added CIccTagCurve::SetGamma member function
  * Added validation check for single entry (gamma) curves to CIccTagLut8
    and CIccTagLut16

2006-10-10 Rohit Patil